add challenge tab to subdomain

--- a/app/assets/css/elements/_tabs.scss
+++ b/app/assets/css/elements/_tabs.scss
@@ -60,6 +60,14 @@
     }
   }
 
+  li.my-tab {
+    width: 25%;
+
+    &:first-child {
+      width: 25%;
+    }
+  }
+
   li.active {
     z-index: 1;
     position: relative;
