--- a/app/assets/css/parts/_player-hazards.scss
+++ b/app/assets/css/parts/_player-hazards.scss
@@ -49,7 +49,7 @@
 }
 
 .player-hazard--challenger {
-  background: white;
+  background: white !important;
   text-shadow: none;
   color: #00897B;
 }
