--- a/app/components/player/specific-stats.partial.html
+++ b/app/components/player/specific-stats.partial.html
@@ -191,7 +191,7 @@
 		        <label><span translate="kills"></span> / <span translate="deaths"></span></label>
 		      </div>
 		      <div class="col-xs-3 stat">
-		        <span ng-bind="player.currentMap.kd | number:2"></span>
+		        <span ng-bind="(player.currentMap.kd | number:2) || 'N/A'"></span>
 		        <label translate="killsDeathsRatioShort"></label>
 		      </div>
 		    </div>
