fix post challenege screen and add challeneger badges

--- a/app/components/maps/maps.html
+++ b/app/components/maps/maps.html
@@ -178,25 +178,25 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-10" ng-if="challenge">
-            <div class="challenge-intro" ng-if="challenge.leaderboard">
+            <div class="challenge-intro" ng-if="challenge.leaderboard && challenge.active">
               <div class="challenge-intro__header">
                 <span ng-if="currentMapInfo.weekText === 'this week'">You are challenged, in the ways of old</span>
-                <span ng-if="currentMapInfo.weekText !== 'this week'">You were challenged, in the ways of old</span>
+                <!--<span ng-if="currentMapInfo.weekText !== 'this week'">You were challenged, in the ways of old</span>-->
               </div>
               <div class="challenge-intro__challenge" ng-bind="challenge.duringTitle"></div>
               <div class="challenge-intro__descr">
                 <span ng-if="currentMapInfo.weekText === 'this week'">
                   Be among the three best challengers to earn a &nbsp;<div class="player-hazard player-hazard--challenger">Challenger</div>&nbsp;badge
                 </span>
-                <span ng-if="currentMapInfo.weekText !== 'this week'">
-                  Variks is counting the results, you will know soon who got the &nbsp;<div class="player-hazard player-hazard--challenger">Challenger</div>&nbsp;badge
-                </span>
+                <!--<span ng-if="currentMapInfo.weekText !== 'this week'">-->
+                  <!--Variks is counting the results, you will know soon who got the &nbsp;<div class="player-hazard player-hazard&#45;&#45;challenger">Challenger</div>&nbsp;badge-->
+                <!--</span>-->
               </div>
             </div>
             <div class="challenge-after" ng-if="challenge.leaderboard && !challenge.active" ng-bind-html="challenge.afterTitle"></div>
           </div>
         </div>
-        <p>&nbsp;</p>
+        <p ng-if="challenge.active">&nbsp;</p>
         <div class="row" ng-class="{'challenge-result': !challenge.active}" ng-if="challenge && challenge.leaderboard && challenge.leaderboard.length > 0">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header faded" ng-if="challenge.active">
