--- a/app/assets/css/inc/_colors.scss
+++ b/app/assets/css/inc/_colors.scss
@@ -17,6 +17,7 @@ $stats-background: #E8EAF6;
 $maps-background: #E0F2F1;
 $this-week-background: #E0F2F1;
 $map-based-background: #E0F7FA;
+$challenge-background: #E0F2F1;
 
 $header-bg: $main-dark;
 $footer-bg: $main-dark;
