--- a/app/components/player/player.html
+++ b/app/components/player/player.html
@@ -34,10 +34,10 @@
     <uib-tab class="player-tab--maps my-tab" heading="Weapons" analytics-on analytics-event="Click" analytics-category="Weapons">
       <div ng-include="'components/stats/weapons.partial.html'"></div>
     </uib-tab>
-    <uib-tab class="player-tab--last-matches my-tab" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches" ng-click="getLastMatch(player)">
+    <uib-tab class="player-tab--last-matches my-tab" heading="Matches" analytics-on analytics-event="Click" analytics-category="Last Matches" ng-click="getLastMatch(player)">
       <div ng-include="'components/matches/matches.partial.html'"></div>
     </uib-tab>
-    <uib-tab class="player-tab--equipped my-tab" heading="Challenge" analytics-on analytics-event="Click" analytics-category="Challenge">
+    <uib-tab class="player-tab--challenge my-tab" heading="Challenge" analytics-on analytics-event="Click" analytics-category="Challenge">
       <div ng-include="'components/stats/challenge.partial.html'"></div>
     </uib-tab>
   </uib-tabset>
