--- a/app/components/stats/challenge.partial.html
+++ b/app/components/stats/challenge.partial.html
@@ -1,17 +1,15 @@
-<div class="player-tab--equipped" ng-if="player.challengeScore">
+<div class="player-tab--challenge" ng-if="player.challengeScore">
   <div class="player-tab__section">
     <div class="row">
-      <div class="challenge-intro" style="background-size: 9em auto; border-radius: 0;background-position-x: 0em;margin-top: 1px; padding-left: 0px;" ng-if="subdomain">
-        <div class="challenge-intro__header" style="padding-left: 10em;">
-          <span>Current Score</span>
-        </div>
-        <div class="challenge-intro__descr" style="padding-left: 9em;">
+      <div class="challenge-tab">
+        <div class="stat">
           <span ng-bind="player.challengeScore | number:0"></span>
+          <label>Current score</label>
         </div>
       </div>
     </div>
   </div>
-  <div class="player-tab__section" ng-if="player.challengeWeapons">
+  <div class="player-tab__section" ng-if="player.challengeWeapons && player.challengeWeapons.length > 0">
     <div class="row">
       <div class="last-match-weapon col-xs-12">
         <div class="row" style="margin-bottom: 10px;" ng-repeat="weapons in player.challengeWeapons track by $index">
