Added kill stats on my challenge leaderboard

--- a/app/assets/css/parts/_challenge.scss
+++ b/app/assets/css/parts/_challenge.scss
@@ -28,6 +28,10 @@ $challenge-color: #009688;
   }
 }
 
+.challenge-weapon {
+  margin-bottom: 1em;
+}
+
 .challenge-intro__header {
   color: $challenge-color;
   font-family: 'Roboto Condensed';
