--- a/app/components/inventory/weapons.template.html
+++ b/app/components/inventory/weapons.template.html
@@ -15,7 +15,7 @@
         </span>
       </div>
       <div class="weapon__perks">
-        <div class="weapon-perk" ng-repeat="node in weapon.nodes track by $index"
+        <div class="weapon-perk" ng-if="node.description.indexOf('Ornament') === -1" ng-repeat="node in weapon.nodes track by $index"
              title="{{node.name}}" data-content="{{node.description}}" bs-popover>
           <i class="weapon-perk__icon">
             <img class="img-responsive" ng-src="{{'https://www.bungie.net' + node.icon}}" alt="{{node.name}}">
