--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -8,16 +8,14 @@
           <div class="player-info__sub">
             <div class="player-info__class" ng-bind="player.totalBadges > 2 ? subclassShort(player.characterInfo.subclassName) : player.characterInfo.subclassName"></div>
             <div class="player-info__hazards">
-              <span ng-repeat="hazard in player.nonHazardCharity | orderBy:'-' track by $index" ng-bind="hazard.status" class="player-hazard player-hazard--charity1"
-                   data-template-url="shared/popovers/charity1.popover.html" data-placement="bottom" ng-mouseover="johnCena(hazard.status)" ng-click="johnCena(hazard.status)" bs-popover>
-              </span><!--
-              --><span ng-repeat="badge in player.badges track by $index" ng-bind="badge.title" class="player-hazard"
-                    ng-class="{'player-hazard--challenger': badge.title === 'Challenger', 'player-hazard--joel': badge.title === 'Jerk'}"
-                    data-content="{{badge.text}}" data-placement="bottom" bs-popover>
-              </span><!--
-              --><span ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard" class="player-hazard"
-                   ng-class="{'player-hazard--developer': hazard === 'Developer' || hazard === 'Guardian.gg', 'player-hazard--joel': hazard === 'Twitter Guy', 'player-hazard--donator': hazard === 'Donator'}"
-                   data-placement="bottom" data-content="{{'badges.' + hazard | translate}}" bs-popover>
+              <span ng-repeat="badge in player.badges track by $index"
+                    ng-bind="badge.status"
+                    class="player-hazard"
+                    ng-class="badge.htmlClass"
+                    data-template-url="shared/popovers/charity.popover.html"
+                    data-placement="bottom"
+                    ng-mouseover="johnCena(badge.status)"
+                    ng-click="johnCena(badge.status)" bs-popover>
               </span>
             </div>
           </div>
@@ -38,9 +36,15 @@
 </div>
 <div class="player__content player-quick-look" ng-class="{'is-hidden': !$storage.visibility.all && !$storage.visibility.kdRatio}" ng-show="$storage.visibility.all || $storage.visibility.kdRatio">
   <div class="row">
-    <div class="player-quick-look__form col-xs-9">
+    <div class="player-quick-look__form col-xs-9" ng-if="!player.errorStatus">
       <div class="player-quick-look__form__matches" trials-history="player.activities.lastTwentyFive" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
       <label class="data-label" translate="RECENT"></label>
+    </div>
+    <div class="player-quick-look__form col-xs-9" ng-if="!player.activities.lastTwentyFive && player.errorStatus">
+      <div class="message message--warning"
+           style="padding-left: 40px;font-size: 10px;border-radius: 4px;background-image: linear-gradient(180deg, #ff6a5f 0%, #ff6a5f 50%, #ea6359 100%)">
+        Unable to retrieve data from Bungie API <br/> {{player.errorStatus}}
+      </div>
     </div>
     <div class="player-quick-look__kd col-xs-3" data-template-url="shared/popovers/kd.popover.html" data-placement="left" bs-popover>
       <div class="player-quick-look__kd__nr">
