--- a/app/components/maps/maps.html
+++ b/app/components/maps/maps.html
@@ -93,28 +93,22 @@
         <div class="row">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
-              Top weapons from Guardian.gg
+              Top weapons based on total amount of kills this week
             </h3>
-            <a ng-href="https://guardian.gg/en/weapon-stats?platform={{platformNumeric}}&mode=14&start={{trialsDates.begin}}&end={{trialsDates.end}}"
-               target="_blank"
-               data-content="Kindly provided by Guardian.gg. Click here to head over there for the complete list and a lot more cool stats!" bs-popover>
-              <i class="material-icons icon--small info">&#xE148;</i>
-            </a>
           </div>
-          <div class="col-xs-12 col-sm-10" ng-if="!gggShow">
+          <div class="col-xs-12 col-sm-10" ng-if="weaponPercentage.length === 0">
             <div class="first-in-lighthouse__undecided">
-              Guardian.gg does not have any weapon stats to show (yet!).
+              We do not have any weapon stats to show (yet!).
             </div>
           </div>
-          <div class="col-xs-12 col-sm-5" ng-repeat="type in [gggWeapons[platformNumeric].primary,
-                                     gggWeapons[platformNumeric].special] track by $index">
+          <div class="col-xs-12 col-sm-5" ng-repeat="type in weaponPercentage track by $index">
             <div class="row top-weapon" ng-repeat="weapon in type track by $index" ng-if="$index < 3">
               <div class="col-xs-6 col-sm-7 last-weapon-weapon__descr">
-                <img class="last-match-weapon__img img-responsive" ng-src="{{'https://www.bungie.net/' + weapon.icon}}" alt="{{weapon.name}}">
+                <img class="last-match-weapon__img img-responsive" ng-src="{{weapon.icon}}" alt="{{weapon.name}}">
                 <span class="last-match-weapon__title" ng-bind="weapon.name"></span>
               </div>
               <div class="col-xs-6 col-sm-5 stat">
-                <span ng-bind="weapon.kills | number:2"></span>%
+                <span ng-bind="weapon.percentage | number:2"></span>%
               </div>
             </div>
             <hr class="hr--minor visible-xs" ng-if="$index === 0">
