--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -76,6 +76,22 @@
     </div>
   </div>
 
+  <div class="april-fools" ng-click="$storage.realtime = !$storage.realtime">
+    <span class="april-fools__content2">NOW IN BETA!!!</span>
+    <div class="april-fools__content">
+      <span>MEGA REAL-TIME REPORT</span>
+      <i
+        data-content="Maybe probably around 96% accurate we think"
+        class="material-icons icon--small info" style="color: white; cursor: pointer;"
+        bs-popover>&#xE8FD;</i>
+    </div>
+    <span class="togglebutton">
+      <label>
+        <input type="checkbox" ng-model="$storage.realtime">
+      </label>
+    </span>
+  </div>
+
   <dtr-message ng-if="false" data-id="1" data-message=""></dtr-message>
 
   <div class="controls-map" ng-class="{'is-week-23': isPlaylist()}"
