add proper counting phase for chalenege

--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -94,7 +94,7 @@
       </div>
       <button type="button" class="btn btn-flat btn-sm" ng-if="currentMap.mapImage && !isPlaylist()"
               data-template-url="shared/modals/map.modal.html" bs-modal>
-        Overview
+        Map Callout
       </button>
     </div>
   </div>
