--- a/app/components/home/aside.partial.html
+++ b/app/components/home/aside.partial.html
@@ -1,6 +1,17 @@
 <div class="more">
 	<h2 class="more__title">More Trials Report!</h2>
 	<hr>
+  <section class="more__section">
+    <a
+      href="https://leaderboards.trials.report"
+      target="_self">
+      <span class="more__logo">Leaderboards</span>
+      <label>
+        Browse weapon and player standings for every year and week of Trials
+      </label>
+    </a>
+  </section>
+  <hr>
 	<section class="more__section more__section--side-by-side">
 		<a href="https://twitter.com/trialsreport"
 			target="_blank"
