ELO / MMR rating toggle

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -41,6 +41,7 @@
 @import 'parts/settings';
 @import 'parts/kd-graph';
 @import 'parts/challenge';
+@import 'parts/rating-toggle';
 
 // Player card
 @import 'parts/player';
