--- a/app/components/player/player.html
+++ b/app/components/player/player.html
@@ -31,7 +31,12 @@
         <div class="col-xs-5">
           <div class="stat">
             <span realtime type="elo">1,200</span>
-            <label>Actual Elo <span class="player-hazard">LIVE</span></label>
+            <label>TSRELO <i
+              data-content="Our own new rating system, Truer Skill Rank Elo. This one DOES update in real-time!!!"
+              class="material-icons icon--small info" style="cursor: pointer;"
+              bs-popover>&#xE8FD;</i>
+              <span class="player-hazard">LIVE</span>
+            </label>
           </div>
         </div>
       </div>
