--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -64,26 +64,24 @@
 </div>
 <div class="player-main-stats" ng-class="{'is-hidden': !$storage.visibility.all && !$storage.visibility.mainStats}" ng-show="$storage.visibility.all || $storage.visibility.mainStats">
   <div class="row">
-    <div class="col-xs-3 stat" data-template-url="shared/popovers/currentWeek.popover.html" data-placement="top-left" bs-popover>
+    <div class="col-xs-2 stat" data-template-url="shared/popovers/currentWeek.popover.html" data-placement="top-left" bs-popover>
       <span ng-if="player.stats.activitiesWinPercentage.basic.value"
             ng-bind="(player.stats.activitiesWinPercentage.basic.value | number:0) + '%'"></span>
       <span ng-if="!player.stats.activitiesWinPercentage.basic.value">N/A</span>
       <label translate="wins"></label>
     </div>
-    <div class="col-xs-3 stat" data-template-url="shared/popovers/streak.popover.html" bs-popover>
+    <div class="col-xs-2 stat" data-template-url="shared/popovers/streak.popover.html" bs-popover>
       <span ng-bind="player.activities.streak || 'N/A'"></span>
       <span class="match player-main-stats__streak" ng-class="{'match--win': player.activities.recentActivity.standing === 0, 'match--loss': player.activities.recentActivity.standing === 1}"></span>
       <label translate="STREAK"></label>
     </div>
     <div class="col-xs-3 stat">
+      <span ng-bind="(player.mmr.rating | number:0) || 'N/A'" data-template-url="shared/popovers/trnMMR.popover.html" bs-popover></span>
+      <label translate="TRN MMR"></label>
+    </div>
+    <div class="col-xs-2 stat">
       <span ng-bind="(player.ggg.elo | number:0) || 'N/A'" data-template-url="shared/popovers/gggElo.popover.html" bs-popover></span>
-      <span>
-        <a href="https://guardian.gg/en/faq" target="_blank"
-           data-content="Elo is an account-wide rating system provided by Guardian.gg" bs-popover>
-          <i class="material-icons icon--small">&#xE8FD;</i>
-        </a>
-      </span>
-      <label translate="ELO"></label>
+      <label translate="G.GG ELO"></label>
     </div>
     <div class="col-xs-3 stat" data-template-url="shared/popovers/lighthouse.popover.html" data-placement="top-right" bs-popover>
       <span class="player-main-stats__lighthouse fail" ng-if="getLighthouseCount(player, subdomain) < 1">
