--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -76,17 +76,17 @@
     </div>
   </div>
 
-  <div class="april-fools" ng-click="$storage.realtime = !$storage.realtime">
-    <span class="april-fools__content2">NOW IN BETA!!!</span>
-    <div class="april-fools__content">
-      <span>MEGA REAL-TIME REPORT</span>
-    </div>
-    <span class="togglebutton">
-      <label>
-        <input type="checkbox" ng-model="$storage.realtime">
-      </label>
-    </span>
-  </div>
+  <!--<div class="april-fools" ng-click="$storage.realtime = !$storage.realtime">-->
+    <!--<span class="april-fools__content2">NOW IN BETA!!!</span>-->
+    <!--<div class="april-fools__content">-->
+      <!--<span>MEGA REAL-TIME REPORT</span>-->
+    <!--</div>-->
+    <!--<span class="togglebutton">-->
+      <!--<label>-->
+        <!--<input type="checkbox" ng-model="$storage.realtime">-->
+      <!--</label>-->
+    <!--</span>-->
+  <!--</div>-->
 
   <dtr-message ng-if="false" data-id="1" data-message=""></dtr-message>
 
