--- a/app/assets/css/parts/_challenge.scss
+++ b/app/assets/css/parts/_challenge.scss
@@ -1,7 +1,7 @@
 $challenge-color: #009688;
 
 .challenge-intro {
-  background: url('/assets/img/variks.png') #E0F2F1 no-repeat -3em bottom;
+  background: url('/assets/img/variks-vex.png') #E0F2F1 no-repeat -3em bottom;
   background-size: 15em auto;
   border-radius: .5em;
   padding: 1.5em;
@@ -11,7 +11,7 @@ $challenge-color: #009688;
 }
 
 .challenge-tab {
-  background: url('/assets/img/variks.png') #E0F2F1 no-repeat 2em bottom;
+  background: url('/assets/img/variks-vex.png') #E0F2F1 no-repeat 2em bottom;
   background-size: auto 100%;
   border-radius: .5em;
   padding: 1.5em;
